Add workflows/build 1.1

--- a/.github/workflows/bash.yaml
+++ b/.github/workflows/bash.yaml
@@ -2,9 +2,9 @@ name: bash
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "mainr" ]
 
   workflow_dispatch:
 
